<resources>
    <string name="app_name">DiplomskiRad</string>
    <string name="sign_out">Sign out</string>
    <string name="hello">Hello, </string>
    <string name="welcome">Welcome to Fire image annotation tool</string>
    <string name="supporting_text">Are you sure you want to sign out?</string>
    <string name="accept">YES</string>
    <string name="decline">NO</string>
    <string name="generate">Generate image set</string>
    <string name="hint_email">Enter your e-mail address</string>
    <string name="hint_password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered">Not Registered Yet , Sign Up !</string>
    <string name="sign_in_prompt">Sign in to continue</string>
    <string name="register_prompt">Sign up to continue</string>
    <string name="hint_password_confirm">Please confirm your password</string>
    <string name="already_registered">Already Registered , Sign In !</string>
    <string name="sign_up">Sign Up</string>
    <string name="done">Done</string>
    <string name="fire">FIRE</string>
    <string name="smoke">SMOKE</string>
    <string name="image_for_annotation">image for annotation</string>
    <string name="save_shape">SAVE SHAPE</string>
    <string name="additional_information">ADDITIONAL INFORMATION</string>
    <string name="space_type">SPACE TYPE:</string>
    <string name="indoor">INDOOR</string>
    <string name="outdoor">OUTDOOR</string>
    <string name="unknown">UNKNOWN</string>
    <string name="room_type">ROOM TYPE:</string>
    <string name="warehouse">WAREHOUSE</string>
    <string name="office">OFFICE</string>
    <string name="time_of_day">TIME OF DAY</string>
    <string name="daytime">DAYTIME</string>
    <string name="nighttime">NIGHTTIME</string>
    <string name="sunrise_sunset">SUNRISE / SUNSET</string>
    <string name="flame_size">FLAME SIZE</string>
    <string name="small">SMALL</string>
    <string name="medium">MEDIUM</string>
    <string name="large">LARGE</string>
    <string name="none">NONE</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="building">BUILDING</string>
    <string name="not_selected">Not selected</string>
    <string name="indoor_save">Indoor</string>
    <string name="outdoor_save">Outdoor</string>
    <string name="unknown_save">Unknown</string>
    <string name="warehouse_save">Warehouse</string>
    <string name="office_save">Office</string>
    <string name="building_save">Building</string>
    <string name="daytime_save">Daytime</string>
    <string name="nighttime_save">Nigthttime</string>
    <string name="sunrise_sunset_save">Sunrise/Sunset</string>
    <string name="small_save">Small</string>
    <string name="medium_save">Medium</string>
    <string name="large_save">Large</string>
    <string name="none_save">"None"</string>
    <string name="firestore_save_failure_message">Error saving image annotation to firestore! Please try again</string>
    <string name="firestore_save_success_message">Successfully saved image annotation to firestore!</string>
    <string name="end_of_generated_set_message">You\'ve reached the end of generated set!</string>
    <string name="undo">"UNDO"</string>
    <string name="clear_canvas">clear canvas</string>
</resources>
