<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/title_additional_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/additional_information"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/scroll_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_container"
            android:layout_width="0dp"
            android:layout_height="550dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_additional_info">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/space_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingTop="12dp"
                        android:text="@string/space_type"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/group_space_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/space_type">

                        <RadioButton
                            android:id="@+id/btn_indoor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/indoor"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/btn_outdoor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/outdoor"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/btn_unknown_space_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unknown"
                            android:textSize="14sp" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/room_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingTop="12dp"
                        android:text="@string/room_type"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/group_space_type" />

                    <RadioGroup
                        android:id="@+id/group_room_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/room_type">

                        <RadioButton
                            android:id="@+id/btn_warehouse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/warehouse" />

                        <RadioButton
                            android:id="@+id/btn_office"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/office" />

                        <RadioButton
                            android:id="@+id/btn_building"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/building" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/time_of_day"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingTop="12dp"
                        android:text="@string/time_of_day"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/group_room_type" />

                    <RadioGroup
                        android:id="@+id/group_time_of_day"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time_of_day">

                        <RadioButton
                            android:id="@+id/btn_daytime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/daytime" />

                        <RadioButton
                            android:id="@+id/btn_nighttime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nighttime" />

                        <RadioButton
                            android:id="@+id/btn_sunrise_sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunrise_sunset" />

                        <RadioButton
                            android:id="@+id/btn_unknown_daytime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unknown" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/flame_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingTop="12dp"
                        android:text="@string/flame_size"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/group_time_of_day" />

                    <RadioGroup
                        android:id="@+id/group_flame_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/flame_size">

                        <RadioButton
                            android:id="@+id/btn_small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/small" />

                        <RadioButton
                            android:id="@+id/btn_medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medium" />

                        <RadioButton
                            android:id="@+id/btn_large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/large" />

                        <RadioButton
                            android:id="@+id/btn_none"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/none" />

                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll_container" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
